--- a/order-service.properties
+++ b/order-service.properties
@@ -1,3 +1,4 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/order_service
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
