--- a/product-service.properties
+++ b/product-service.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/product_service
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
-test.name=Ratnesh-Chouhan
+test.name=Update-1
